# polyglot-powerlifting

./: .editorconfig  .gitignore  .prettierignore  .release-please-manifest.json  CHANGELOG.md  LEARNING_PLAN.md  Makefile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  render.yaml  test_pydantic.py  test_supabase.py  test_sync.sh  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend-ci.yml  fastapi-ci.yml  nextjs-ci.yml  release-please.yml  svelte-ci.yml  sync-lockfiles.yml
backends/fastapi/: .coverage  .env.example  CHANGELOG.md  Dockerfile  README.md  config.py  main.py  package.json  pyproject.toml
backends/fastapi/middleware/: auth.py  logging.py
backends/fastapi/models/: schemas.py
backends/fastapi/repositories/: lifts.py
backends/fastapi/routes/: health.py  lifts.py
backends/fastapi/services/: db.py  formulas.py  lifts.py  reshel.py
backends/fastapi/tests/: test_api.py  test_formulas.py  test_lifts_service.py
backends/nextjs/: package.json  pnpm-lock.yaml  tsconfig.json  verify.ts
backends/nextjs/src/lib/logic/: formulas.ts
docs/: MASTER_LORE.md  api.md  architecture.md  branding.md  formulas.md  schema.sql
frontends/svelte-web/: .env.example  .gitignore  CHANGELOG.md  README.md  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontends/svelte-web/src/: app.css  app.html
frontends/svelte-web/src/lib/: constants.ts
frontends/svelte-web/src/lib/components/: AuthStatus.svelte  AuthStatus.svelte.test.ts  CalculatorInput.svelte  CalculatorInput.svelte.test.ts  CalculatorResults.svelte  CalculatorResults.svelte.test.ts  HistoryList.svelte  HistoryList.svelte.test.ts  ThemeToggle.svelte  ThemeToggle.svelte.test.ts
frontends/svelte-web/src/lib/schemas/: index.ts  lift.ts  openapi.ts
frontends/svelte-web/src/lib/services/: api.test.ts  api.ts  (+1 more)
frontends/svelte-web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontends/svelte-web/tests/: auth.test.ts  calculator.test.ts  sync.test.ts
spec/: coefficients.md  openapi.yaml
(+37 files in other folders)
